--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -12,10 +12,14 @@ html {
   background: #fff;
   box-sizing: border-box;
   font-size: calc(100vw / 3.75);
+  text-size-adjust: none !important;
+  -webkit-text-size-adjust: none !important;
 }
 
 body {
   font-size: 16px;
   width: 100%;
   height: 100%;
+  text-size-adjust: none !important;
+  -webkit-text-size-adjust: none !important;
 }
